# travel-data-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yaml  main.py  pyproject.toml
app/agent/: context.py  graph.py  llm.py  llm_utils.py  state.py
app/agent/nodes/: add_extra_context.py  compare.py  correct_sql.py  execute_sql.py  extract_keywords.py  filter_metric.py  filter_table.py  generate_sql.py  merge_retrieved_info.py  ranking.py  recall_column.py  recall_metric.py  recall_value.py  trend.py  utils.py  validate_sql.py
app/api/: dependencies.py
app/api/routers/: query_router.py
app/api/schemas/: query_schema.py
app/api/templates/: index.html
app/clients/: embedding_client_manager.py  es_client_manager.py  mysql_client_manager.py  qdrant_client_manager.py
app/conf/: app_config.py
app/core/: context.py  lifespan.py
app/prompt/: prompt_loader.py
app/repositories/es/: value_es_repository.py
app/scripts/: build_meta_knowledge.py  generate_meta_skeleton.py
app/services/: meta_knowledge_service.py  query_service.py
conf/: app_config.yaml.example  meta_config.travel.yaml  meta_config.yaml
docker/elasticsearch/: Dockerfile  README.md
frontend/: index.html
prompts/: extend_keywords_for_column_recall.prompt  extend_keywords_for_value_recall.prompt  extract_intent.prompt  filter_table_info.prompt  generate_compare_sql.prompt  generate_ranking_sql.prompt  generate_sql.prompt  generate_trend_sql.prompt
test/: async_test.py  prompttemplate_test.py  test_meta_acceptance.py
test/evals/: run_evals.py  travel_questions.yaml
(+8 files in other folders)
