[project]
name = "data-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "asyncmy>=0.2.11",
    "cryptography>=46.0.5",
    "elasticsearch[async]>=8,<9",
    "fastapi[standard]>=0.135.1",
    "huggingface-hub>=1.7.2",
    "jieba>=0.42.1",
    "langchain>=1.2.13",
    "langchain-deepseek>=1.0.1",
    "langchain-huggingface>=1.2.1",
    "langgraph>=1.1.3",
    "loguru>=0.7.3",
    "omegaconf>=2.3,<3",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.17.1",
    "sqlalchemy>=2.0.48",
]
